url: ${MAESTRO_BASE_URL}/login
tags: [products]
---
- launchApp

- runFlow: ../subflows/login.yaml
- runFlow: ../subflows/select-organization.yaml

- extendedWaitUntil:
    visible: "Panel de control"
    timeout: 30000

- tapOn: Productos

- repeat:
    times: 1
    commands:
      - tapOn: "Agregar producto"

      - tapOn:
          id: product-form-name
      - inputText:
          text: ${"Product_" + Math.floor(Math.random() * 10000)}
          label: "Random product name"

      - tapOn:
          id: product-form-barcode
      - inputRandomNumber:
          length: 9

      - tapOn:
          id: product-form-price
      - eraseText
      - inputRandomNumber:
          length: 5

      - tapOn:
          id: product-form-cost
      - eraseText
      - inputRandomNumber:
          length: 4

      - tapOn:
          id: product-form-stock
      - eraseText
      - inputRandomNumber:
          length: 2

      - tapOn: "Guardar producto"
      - extendedWaitUntil:
          notVisible: "Guardar producto"
          timeout: 15000
